test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST__api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 31 Mar 2025 14:19:58 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="rAQ58JW9QXy9euw6pyVdbveZi+bsdT1Z", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 4

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}